--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cmdk": "^1.0.4",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.468.0",
     "next": "14.2.23",
     "next-themes": "^0.2.1",
@@ -33,6 +35,7 @@
     "react": "^18",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
